Added client mix

--- a/ProductMix.ipynb
+++ b/ProductMix.ipynb
@@ -13,17 +13,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "edb7e2ac-f526-4e70-96a9-750e8588a261",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Product</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>367533</td>\n",
+       "      <td>Product4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>127483</td>\n",
+       "      <td>Product3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>308613</td>\n",
+       "      <td>Product1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>364482</td>\n",
+       "      <td>Product2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>167238</td>\n",
+       "      <td>Product1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CustomerID   Product\n",
+       "0      367533  Product4\n",
+       "1      127483  Product3\n",
+       "2      308613  Product1\n",
+       "3      364482  Product2\n",
+       "4      167238  Product1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_customers = pd.read_csv(\"customer_mix_sample.csv\")"
+    "df_customers = pd.read_csv(\"customer_mix_sample.csv\")\n",
+    "df_customers.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "63a630a8-9351-4ab2-8ba9-d49edfcff1b6",
    "metadata": {},
    "outputs": [],
@@ -53,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "eee766b7-9dc6-4a49-b9e6-968307bef25f",
    "metadata": {},
    "outputs": [],
@@ -75,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "332fee81-5aa1-459d-9f60-aa39c19ee1ee",
    "metadata": {},
    "outputs": [
@@ -364,7 +434,7 @@
        "30            5  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,273 +445,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "id": "0624df62-674d-43e3-a8b4-c95f8545e1ba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ProductNames</th>\n",
-       "      <th>count</th>\n",
-       "      <th>ProductCount</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Product1</td>\n",
-       "      <td>16486</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Product0</td>\n",
-       "      <td>16382</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Product2</td>\n",
-       "      <td>16314</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Product4</td>\n",
-       "      <td>16288</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Product3</td>\n",
-       "      <td>16252</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Product2 and Product0</td>\n",
-       "      <td>13725</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Product4 and Product1</td>\n",
-       "      <td>13632</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Product3 and Product1</td>\n",
-       "      <td>13567</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Product1 and Product0</td>\n",
-       "      <td>13546</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Product3 and Product2</td>\n",
-       "      <td>13528</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Product1 and Product2</td>\n",
-       "      <td>13478</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Product3 and Product0</td>\n",
-       "      <td>13405</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Product4 and Product3</td>\n",
-       "      <td>13378</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Product4 and Product2</td>\n",
-       "      <td>13360</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Product4 and Product0</td>\n",
-       "      <td>13267</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Product4 and Product3 and Product1</td>\n",
-       "      <td>11185</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Product1 and Product2 and Product0</td>\n",
-       "      <td>11143</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Product4 and Product1 and Product0</td>\n",
-       "      <td>11122</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Product3 and Product1 and Product0</td>\n",
-       "      <td>11118</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Product3 and Product1 and Product2</td>\n",
-       "      <td>11097</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Product3 and Product2 and Product0</td>\n",
-       "      <td>11095</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Product4 and Product3 and Product2</td>\n",
-       "      <td>11091</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Product4 and Product2 and Product0</td>\n",
-       "      <td>10983</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Product4 and Product3 and Product0</td>\n",
-       "      <td>10940</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Product4 and Product1 and Product2</td>\n",
-       "      <td>10903</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Product4 and Product1 and Product2 and Product0</td>\n",
-       "      <td>9127</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Product3 and Product1 and Product2 and Product0</td>\n",
-       "      <td>9093</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Product4 and Product3 and Product2 and Product0</td>\n",
-       "      <td>9063</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>Product4 and Product3 and Product1 and Product2</td>\n",
-       "      <td>9059</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Product4 and Product3 and Product1 and Product0</td>\n",
-       "      <td>9012</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Product4 and Product3 and Product1 and Product...</td>\n",
-       "      <td>7551</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         ProductNames  count ProductCount\n",
-       "0                                            Product1  16486            1\n",
-       "1                                            Product0  16382            1\n",
-       "2                                            Product2  16314            1\n",
-       "3                                            Product4  16288            1\n",
-       "4                                            Product3  16252            1\n",
-       "5                               Product2 and Product0  13725            2\n",
-       "6                               Product4 and Product1  13632            2\n",
-       "7                               Product3 and Product1  13567            2\n",
-       "8                               Product1 and Product0  13546            2\n",
-       "9                               Product3 and Product2  13528            2\n",
-       "10                              Product1 and Product2  13478            2\n",
-       "11                              Product3 and Product0  13405            2\n",
-       "12                              Product4 and Product3  13378            2\n",
-       "13                              Product4 and Product2  13360            2\n",
-       "14                              Product4 and Product0  13267            2\n",
-       "15                 Product4 and Product3 and Product1  11185            3\n",
-       "16                 Product1 and Product2 and Product0  11143            3\n",
-       "17                 Product4 and Product1 and Product0  11122            3\n",
-       "18                 Product3 and Product1 and Product0  11118            3\n",
-       "19                 Product3 and Product1 and Product2  11097            3\n",
-       "20                 Product3 and Product2 and Product0  11095            3\n",
-       "21                 Product4 and Product3 and Product2  11091            3\n",
-       "22                 Product4 and Product2 and Product0  10983            3\n",
-       "23                 Product4 and Product3 and Product0  10940            3\n",
-       "24                 Product4 and Product1 and Product2  10903            3\n",
-       "25    Product4 and Product1 and Product2 and Product0   9127            4\n",
-       "26    Product3 and Product1 and Product2 and Product0   9093            4\n",
-       "27    Product4 and Product3 and Product2 and Product0   9063            4\n",
-       "28    Product4 and Product3 and Product1 and Product2   9059            4\n",
-       "29    Product4 and Product3 and Product1 and Product0   9012            4\n",
-       "30  Product4 and Product3 and Product1 and Product...   7551            5"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# product_mix_df = df_clientmix[['Tag']].groupby('Tag').agg('value_counts').reset_index()\n",
     "# product_mix_df[['ProductNames', 'ProductCount']] = product_mix_df.apply(lambda row: get_productmix_names_productcounts(location_value, int(row.Tag)), axis='columns', \\\n",
     "#                                                                   result_type='expand')\n",
     "# product_mix_df[['ProductNames','count', \"ProductCount\"]].sort_values(by=['ProductCount', 'count'], ascending=[True, False]).reset_index(drop=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e02ac50b-b363-43d5-80ee-f39e10c683c6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
